--- a/README
+++ b/README
@@ -15,7 +15,7 @@ Date: 10/23/2007
 Example
 =======
 class User < ActiveRecord::Base
-  validates_area_code :phone
+  validates_area_code :phone, :allow_toll_free => false, :format => {:with => /\d{3}-\d{3}-\d{4}/, :message => 'is invalid. Should be XXX-XXX-XXXX'}
 end
 
 Author
